update sina jsapi request way and netty vm option